# ETL

./: README.md  pyproject.toml  requirements-airflow.txt  requirements.txt
conf/: pipeline.yml
dags/: cdp_etl_dag.py
docs/: architecture.md
scripts/: doctor.py  run_local.ps1  run_local.sh
src/pipeline/: __init__.py  config.py  ingestion.py  job.py  load.py  quality.py  transformation.py
tests/: test_config.py  test_docs.py  test_quality_rules.py
