[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdp-etl-sample"
version = "0.1.0"
description = "Sample PySpark ETL pipeline for Cloudera Data Platform"
requires-python = ">=3.10"
dependencies = [
  "pyspark==3.5.1",
  "PyYAML==6.0.2",
  "pytest==8.3.2",
]

[project.optional-dependencies]
airflow = [
  "apache-airflow==2.9.3; python_version < '3.13'",
  "apache-airflow==3.1.7; python_version >= '3.13' and python_version < '3.14'",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
